--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -6,7 +6,7 @@ header{
 
     color: #f2f0e8;
     text-shadow:0 1px rgba(0, 0, 0, 0.7);
-    background: linear-gradient(to right, #f3b98c, #b3d946);
+    background: linear-gradient(to right, #f3b98c, $green);
 }
 
 h1{
