--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,4 +1,5 @@
 @import "common/general.scss";
 @import "common/normalize.scss";
+@import "common/variable.scss";
 @import "layout/header.scss";
 @import "layout/navigation.scss";
